Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,23 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+# steps:
+# - publish: '$(System.DefaultWorkingDirectory)'
+#   artifact: devices
+
 steps:
-- publish: '$(System.DefaultWorkingDirectory)'
-  artifact: devices
+- task: NodeTool@0
+  inputs:
+    versionSpec: '20.x'
+  displayName: 'Install Node.js'
+- script: |
+    npm install
+    npm run lint
+    npm run build
+  displayName: Npm commands
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)'
+    ArtifactName: 'devices'
+    publishLocation: 'Container'
+  condition: succeeded()
