--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,11 +5,9 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-# steps:
-# - publish: '$(System.DefaultWorkingDirectory)'
-#   artifact: devices
-
 steps:
+- publish: '$(System.DefaultWorkingDirectory)'
+  artifact: devices
 - task: NodeTool@0
   inputs:
     versionSpec: '20.x'
@@ -19,9 +17,3 @@ steps:
     npm run lint
     npm run build
   displayName: Npm commands
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)'
-    ArtifactName: 'devices'
-    publishLocation: 'Container'
-  condition: succeeded()
