--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^8.4.4",
     "@nestjs/core": "^8.4.4",
+    "@nestjs/cli": "^10.3.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/microservices": "^8.4.4",
     "@nestjs/mongoose": "^9.0.3",
